<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bookbayandroid.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.bookbayandroid.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_myaccount"
        android:name="com.example.bookbayandroid.MyAccountFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_myaccount" />

    <fragment
        android:id="@+id/nav_mybooks"
        android:name="com.example.bookbayandroid.MyBooksFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_mybooks" />

    <fragment
        android:id="@+id/nav_pendingrequests"
        android:name="com.example.bookbayandroid.PendingRequestsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_pendingrequests" />


    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.bookbayandroid.LogoutFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_logout" />

</navigation>